[package]
name = "rust-stock"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Log 和 SimpleLogger在 TUI 应用里看不到
# log = "0.4"
# simple_logger = "1.16"

# 用 Rust 构建终端用户界面的框架
# crossterm 支持 windows, 但性能比 termion 稍差，旧版本鼠标支持有问题
# 使用 tui-rs 和 crossterm 启动一个控制台的终端界面
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.25", features = [ "serde" ] }
# 系列化 library
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
# time library
chrono = "0.4"

# 解决tui里中文宽度的计算
unicode-width = "0.1"

# reqwest太大了3M, ureq也有2M, http_req只有300k
http_req = "0.9"

# 查询跨平台的通用目录位置
dirs-next = "2.0"

# 懒加载 crate
# lazy_static = "1.4.0"
